# uclanr

./: .gitignore  Cargo.toml  LICENSE  README.md  words.txt
.github/workflows/: ci.yml
data/: words.json  words.txt
src/: args.rs  main.rs  words.json  words.rs
