[package]
name = "uclanr"
version = "2.0.1"
authors = ["Axlefublr", "TheSast", "blood-rogue"]
license = "MIT"
description = "A word generator that specializes in useful words"
readme = "README.md"
homepage = "https://github.com/Axlefublr/uclanr"
repository = "https://github.com/Axlefublr/uclanr"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
rand = "0.8.5"
