[package]
name = "uclanr"
version = "2.1.0"
authors = ["Axlefublr", "TheSast", "blood-rogue"]
license = "MIT"
description = "A random word picker that gives you actually useful words."
readme = "README.md"
homepage = "https://github.com/Axlefublr/uclanr"
repository = "https://github.com/Axlefublr/uclanr"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
rand = "0.8.5"
